style: adjust footer, fix scroll bug
add footer styling for tablet, make footer element
flex and give a matching background color,
align text to the left, reveal phone and email
icons, resize and adjust social media icons,
adjust bottom profile picture size and position to
appear to seamlessly fit into the footer, all in
style.css.

found that there was whitespace on the right side
of the screen in tablet and mobile views after a
recent change, and was able to pin it down to an
overflow from the top profile-overlay text in
style.css.

--- a/src/style.css
+++ b/src/style.css
@@ -238,7 +238,7 @@ svg {
   }
   .profile-overlay {
     top: 50px;
-    left: 30px;
+    padding-left: 30px;
   }
   /* targets the <picture> element */
   .profile-image-top {
@@ -289,5 +289,31 @@ svg {
   }
   .card-header h3 {
     padding-left: 0px;
+  }
+
+  footer {
+    display: flex;
+    background-color: #0891b2;
+    padding: 2rem;
+    padding-bottom: 0rem;
+  }
+  .footer-content h2 {
+    padding-left: 1.5rem;
+  }
+  .footer-content {
+    display: block;
+    max-width: 350px;
+  }
+  .phone-email-icons {
+    display: inline-block;
+  }
+  .contact-social-icons {
+    justify-content: flex-start;
+    margin-left: 1.5rem;
+    width: 30px;
+  }
+  .profile-image-bottom {
+    width: 275px;
+    margin-left: 5rem;
   }
 }
